[package]
name = "ndi-sys"
version = "0.1.1-alpha.0"
edition = "2021"
links = "ndi"
authors = ['coral jonas@jonasbengtson.se']
license = 'MIT'
description = 'FFI bindings to NDI'
readme = 'README.md'
repository = 'https://github.com/coral/ndi-sys'
keywords = ['ndi']
categories = ['external-ffi-bindings']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = {version = "0.59.2", optional = true}

[features]
default = ["dynamic_link"]
bindings = ["bindgen"]
dynamic_link = []
